--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ body {
 	font-size: 24px;
 	font-weight: 400;
 	text-align: center;
+	cursor: pointer;
 }
 .conteudo-principal-escrito-botao:hover {
 	background-color: rgba(236, 214, 196, 0.53) ;
